--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "dev": "nodemon --exec 'nf start'",
     "start": "node forever",
     "postinstall": "gulp build",
-    "test": "mocha --compilers js:babel-core/register --require babel-polyfill --recursive './src/**/*.spec.js'"
+    "test": "mocha --require babel-core/register --recursive './src/**/*.spec.js'"
   },
   "devDependencies": {
     "foreman": "^2.0.0",
-    "mocha": "^3.1.1"
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "async": "^2.6.0",
